18.APP_GUESTBOOK/02.test.guestbook/01-7.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-example
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: SET_USER_HOST
    http:
      paths:
        - path: /
          backend:
            serviceName: guestbook
            servicePort: 3000
